SUP-7628: fixing overflow for footer on events page

--- a/local/templates/.default/components/bitrix/news.list/archive_events_full_list/style.css
+++ b/local/templates/.default/components/bitrix/news.list/archive_events_full_list/style.css
@@ -341,3 +341,6 @@ bx-newslist-slider-arrow,
 .events_info table {
     margin-bottom: 50px;
 }
+footer {
+    overflow-y: hidden;
+}
